cleaned out bad comments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/map.css" />
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/queries.css" />
-    <title>Eat N Rate // Rank your taste</title>
+    <title>Eat N Rank // Rank your taste</title>
 
     <script
       src="https://kit.fontawesome.com/2050f71718.js"
